<resources>
    <string name="app_name">Easy xkcd</string>
    <string name="pref_title">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_search_results">Results for</string>
    <string name="delete_favorites">Clear favorites</string>
    <string name="delete_favorites_dialog">Are you sure you want to delete all your Favorites?</string>
    <string name="favorites_cleared">Favorites cleared</string>
    <string name="delete_offline_dialog">Are you sure you want to disable Offline Mode? This will delete all saved images(except favorites)</string>
    <string name="delete_offline_whatif_dialog">Are you sure you want to disable Offline Mode? This will delete all saved articles</string>
    <string name="share_url">Share url with&#8230;</string>
    <string name="share_image">Share image with&#8230;</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="loading_random">Loading Random Comic&#8230;</string>
    <string name="no_favorites">You didn\'t add any Favorites yet!</string>
    <string name="loading_comics">Loading Comics&#8230;</string>
    <string name="loading_articles">Downloading new articles&#8230;</string>
    <string name="loading_article">Loading article&#8230;</string>
    <string name="loading_results">Loading Search Results&#8230;</string>
    <string name="no_connection">No connection&#8230;</string>
    <string name="no_connection_retry">Try again</string>
    <string name="no_connection_favorites">View Favorites</string>
    <string name="comic_error">Comic not available</string>
    <string name="search_error">No comics found</string>
    <string name="loading_latest">Loading Latest Comic&#8230;</string>
    <string name="loading_offline">Downloading Comics&#8230;</string>
    <string name="loading_offline_whatif">Downloading articles&#8230;</string>
    <string name="loading_offline_message">Do not close the app!</string>
    <string name="loading_offline_2">This might take some time, relax&#8230;</string>
    <string name="loading_offline_20">Maybe you should get yourself a coffee or something&#8230;</string>
    <string name="loading_offline_50">Only one more half to go!</string>
    <string name="loading_offline_80">Almost there&#8230;</string>
    <string name="loading_offline_95">An error occurred! Try again</string>
    <string name="loading_offline_96">Just kidding.</string>
    <string name="loading_offline_97">You should have seen your face!</string>
    <string name="delete_offline">Deleting Comics&#8230;</string>
    <string name="delete_offline_articles">Deleting articles&#8230;</string>
    <string name="snackbar_remove">Comic removed from favorites</string>
    <string name="snackbar_add">Comic added to favorites</string>
    <string name="snackbar_remove_all">Favorites cleared</string>
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_rate">So you like Easy xkcd?</string>
    <string name="snackbar_rate_action">Rate</string>
    <string name="action_settings">Settings</string>
    <string name="action_unread">Mark all as unread</string>
    <string name="action_all_read">Mark all as read</string>
    <string name="action_hide_read_articles">Hide read articles</string>
    <string name="action_hide_read_comics">Hide read comics</string>
    <string name="action_favorite">Add to Favorites</string>
    <string name="action_favorite_remove">Remove from Favorites</string>
    <string name="action_latest">Latest Comic</string>
    <string name="action_share">Share Comic</string>
    <string name="action_share_article">Share article</string>
    <string name="action_random">Random Comic</string>
    <string name="action_random_article">Random article</string>
    <string name="action_explain">Explain Comic</string>
    <string name="action_alt">View Alt Text</string>
    <string name="action_night_mode">Night mode</string>
    <string name="action_browser">Open in browser</string>
    <string name="action_swipe">Swipe to navigate</string>
    <string name="action_donate">Donate</string>
    <string name="action_trans">View Transcript</string>
    <string name="action_alt_tip">Tip: You can also view the alt text by long pressing the comic image.</string>
    <string name="what_if_tip">Did you know? Tap an image to view its mouseover text!</string>
    <string name="random_tip">Did you know? Long press the button to get to the previous comic!</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Find a Comic</string>
    <string name="search_hint_whatif">Search an Article</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="new_comic">New Comic!</string>
    <string name="new_comic_view">View</string>
    <string name="new_whatif">New What If!</string>
    <string name="apply_theme">Restart now to apply new theme?</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="open_bookmark">Go To Bookmark</string>
    <string name="bookmark_toast">You can return to your bookmark from overview mode. It will also be highlighted in the comic list</string>
    <string name="bookmark_toast_2">Bookmark added</string>
    <string name="no_bookmark">You didn\'t add a bookmark yet! You can add one in the Comic Browser or by long pressing a comic in this list</string>
    <string name="chooser_title">Open with…</string>
    <string-array name="share_dialog">
        <item>Share Image</item>
        <item>Share URL</item>
    </string-array>
    <string-array name="export_import_dialog">
        <item>Export</item>
        <item>Import</item>
    </string-array>
    <string-array name="whatif_card_long_click">
        <item>Share</item>
        <item>Open in Browser</item>
        <item>Add to Favorites</item>
    </string-array>
    <string-array name="whatif_card_long_click_remove">
        <item>Share</item>
        <item>Open in Browser</item>
        <item>Remove from Favorites</item>
    </string-array>
    <string-array name="card_long_click">
        <item>Add bookmark</item>
        <item>Mark as read</item>
    </string-array>
    <string-array name="card_long_click_remove">
        <item>Add bookmark</item>
        <item>Mark as unread</item>
    </string-array>
    <string name="pref_orientation">Screen Orientation</string>
    <string name="pref_notifications">Update interval for notifications</string>
    <string name="pref_zoom">What If? Text Zoom</string>
    <string name="nv_comicbrowser">Browser</string>
    <string name="nv_overview">Overview</string>
    <string name="nv_favorites">Favorites</string>
    <string name="nv_feedback">Feedback</string>
    <string name="nv_whatif" translatable="false">What if?</string>
    <string name="pref_night">Night Theme</string>
    <string name="pref_invert">Invert black/white images</string>
    <string name="pref_detect_color">Invert images containing color</string>
    <string name="pref_amoled">AMOLED night mode</string>
    <string name="pref_amoled_sum">Saves battery on devices with an AMOLED screen</string>
    <string name="pref_alt_activation">Activation</string>
    <string name="pref_alt_activation_sum">Long tap or single tap</string>
    <string name="pref_alt_options">General Options</string>
    <string name="pref_alt_options_sum">Always show alt text, share alt text, haptic feedback</string>
    <string name="pref_alt_style_sum">Classic or pop-up</string>
    <string name="pref_alt_style_title">Select your preferred style</string>
    <string name="pref_alt">Alt Text haptic feedback</string>
    <string name="pref_alt_sum">Enables the haptic feedback when long pressing images</string>
    <string name="pref_subtitle">Show Action Bar Subtitle</string>
    <string name="pref_subtitle_sum">Sets the current comic number as Action Bar Subtitle</string>
    <string name="pref_random_favorites">Hide FAB in Favorites Screen</string>
    <string name="pref_random_comics">Hide FAB in Comics Screen</string>
    <string name="pref_chrome_custom_tabs">Use Chrome Custom Tabs</string>
    <string name="pref_random_sum">Hides the Floating Action Button. When hidden, there will be a button in the overflow menu instead</string>
    <string name="pref_share">Always share comic image</string>
    <string name="pref_share_sum">Don\'t ask me to decide between sharing the comic\'s image and sharing its URL</string>
    <string name="pref_share_title">Sharing</string>
    <string name="pref_share_link">Include comic link</string>
    <string name="pref_share_link_sum">Also include the link to the comic when sharing an image</string>
    <string name="pref_large">Large comic images</string>
    <string name="pref_large_sum">Load large images if available (e.g. #657). May decrease performance on older devices </string>
    <string name="pref_offline">Offline mode</string>
    <string name="pref_offline_sum">Download all comics to external storage. New comics will be added automatically. Takes up ~150MB.</string>
    <string name="pref_offline_whatif">"What if?" offline mode</string>
    <string name="pref_offline_whatif_sum" translatable="false">~20 MB</string>
    <string name="pref_mobile">Share mobile links</string>
    <string name="pref_mobile_sum">Share m.xkcd.com links instead of xkcd.com</string>
    <string name="pref_notifications_sum">Checks on Monday, Wednesday and Friday for new comics, checks on Tuesday for new What If.</string>
    <string name="pref_zoom_sum">May fix layout issues on some devices</string>
    <string name="pref_repair">Reload Comic Database</string>
    <string name="pref_repair_sum">If you see some blank comics or encounter crashes, this might be the solution</string>
    <string name="pref_export_import">Export/Import Favorites</string>
    <string name="pref_hide_donate">Hide donation button</string>
    <string name="pref_alt_title">Alt text</string>
    <string name="pref_alt_style">Style</string>
    <string name="pref_navbar">Colored Navigation Bar</string>
    <string name="pref_update_mobile">Update on mobile data</string>
    <string name="pref_update_mobile_sum">When disabled, offline comics and what-if articles are only updated on Wi-Fi</string>
    <string name="pref_auto_night">Auto night theme</string>
    <string name="pref_auto_night_start">Start time</string>
    <string name="pref_auto_night_end">End time</string>
    <string name="pref_offline_path">Path for offline data (Experimental)</string>
    <string name="pref_offline_path_sum">Default is root directory of external storage.</string>
    <string name="pref_zoom_scroll">Disable scrolling while zoomed into comic image</string>
    <string name="pref_overview_default">Launch to Overview Mode</string>
    <string name="pref_overview_default_sum">When launching the app, show Overview Mode by default</string>
    <string name="pref_doubletap">Double tap to favorite</string>
    <string name="pref_doubletap_sum">Instead of controlling the zoom level, double tapping a comic will add it to your favorites</string>
    <string name="pref_default_zoom">Scale comic images to fit device screen size by default</string>
    <string name="pref_default_zoom_sum">When disabled, comics may look better on large devices</string>
    <string name="theme_primary_color">Primary color</string>
    <string name="theme_accent_color">Accent color</string>
    <string name="action_earliest_unread">Earliest unread</string>
    <string name="action_thread">Open Reddit Thread</string>
    <string name="pref_fullscreen_enabled">Enable fullscreen mode</string>
    <string name="pref_fullscreen_enabled_sum">Tap a comic to enter fullscreen mode</string>
    <string name="pref_offline_internal_external">Offline data location</string>
    <string name="pref_offline_internal_external_sum">External or internal storage</string>
</resources>