<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_fullscreen_enabled"
        android:summary="@string/pref_fullscreen_enabled_sum"
        android:title="@string/pref_fullscreen_enabled" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_doubletap"
        android:summary="@string/pref_doubletap_sum"
        android:title="@string/pref_doubletap" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_overview_default"
        android:title="@string/pref_overview_default"
        android:summary="@string/pref_overview_default_sum" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_default_zoom"
        android:title="@string/pref_default_zoom"
        android:summary="@string/pref_default_zoom_sum" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_zoom_scroll"
        android:dependency="pref_default_zoom"
        android:title="@string/pref_zoom_scroll" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_custom_tabs"
        android:title="@string/pref_chrome_custom_tabs" />
</PreferenceScreen>
