<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_notifications"
        android:title="@string/pref_notifications"
        android:entries="@array/pref_notifications"
        android:entryValues="@array/pref_notifications_entries"
        android:defaultValue="0"
        android:summary="@string/pref_notifications_sum" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_offline"
        android:summary="@string/pref_offline_sum"
        android:title="@string/pref_offline" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_offline_whatif"
        android:summary="@string/pref_offline_whatif_sum"
        android:title="@string/pref_offline_whatif" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_update_mobile"
        android:title="@string/pref_update_mobile"
        android:summary="@string/pref_update_mobile_sum" />
    <ListPreference
        android:key="pref_offline_internal_external"
        android:title="@string/pref_offline_internal_external"
        android:entries="@array/pref_offline_internal_external_entries"
        android:entryValues="@array/pref_offline_internal_external_values"
        android:defaultValue="external"
        android:summary="@string/pref_offline_internal_external_sum" />
</PreferenceScreen>
