<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="pref_night"
        android:title="@string/pref_night"
        android:defaultValue="false" />

    <Preference
        android:key="pref_color_accent"
        android:title="@string/theme_accent_color"
        android:dependency="pref_night"
        android:persistent="false"
        />

    <SwitchPreference
        android:key="pref_amoled"
        android:title="@string/pref_amoled"
        android:summary="@string/pref_amoled_sum"
        android:defaultValue="false"
        android:dependency="pref_night" />

    <SwitchPreference
        android:key="pref_invert"
        android:title="@string/pref_invert"
        android:defaultValue="true"
        android:dependency="pref_night" />

    <SwitchPreference
        android:key="pref_detect_color"
        android:title="@string/pref_detect_color"
        android:defaultValue="true"
        android:dependency="pref_invert" />

    <SwitchPreference
        android:title="@string/pref_auto_night"
        android:key="pref_auto_night"
        android:dependency="pref_night"/>

    <Preference
        android:title="@string/pref_auto_night_start"
        android:persistent="false"
        android:key="pref_auto_night_start"
        android:dependency="pref_auto_night" />

    <Preference
        android:title="@string/pref_auto_night_end"
        android:persistent="false"
        android:key="pref_auto_night_end"
        android:dependency="pref_auto_night" />

</PreferenceScreen>