<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="pref_color_primary"
        android:title="@string/theme_primary_color"
        android:persistent="false"
        />

    <Preference
        android:key="pref_color_accent"
        android:title="@string/theme_accent_color"
        android:persistent="false"
        />

    <SwitchPreference
        android:key="pref_navbar"
        android:title="@string/pref_navbar"
        android:defaultValue="true" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_subtitle"
        android:summary="@string/pref_subtitle_sum"
        android:title="@string/pref_subtitle" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_hide_donate"
        android:title="@string/pref_hide_donate" />
</PreferenceScreen>