<!--
  ~ Copyright 2015, Tom Praschan
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_outline_search_24dp"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_outline_article_24"
        android:menuCategory="secondary"
        app:showAsAction="never" />

    <item android:id="@+id/action_night_mode"
        android:title="@string/action_night_mode"
        android:checkable="true"
        android:menuCategory="secondary"
        app:showAsAction="never" />

    <item android:id="@+id/action_donate"
        android:title="@string/action_donate"
        android:menuCategory="secondary"
        app:showAsAction="never" />

    <item android:id="@+id/action_feedback"
        android:title="@string/nv_feedback"
        android:menuCategory="secondary"
        app:showAsAction="never" />

</menu>
